--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -85,6 +85,7 @@
     <section class="sub-content">
       <div class="device-section">
         <h2>Devices list</h2>
+        <button onclick="setSink()">Reset Primary</button>
         <div id="device-list">
         </div>
       </div>
