linting me things

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -63,12 +63,12 @@
           <input type="text" name="url" required>
           <button type="submit">Search</button>
         </form>
-        <form method="post">
+        <form method="post" style="display: none;">
           <label for="query">Search Term:</label>
           <input type="text" name="query" required>
           <button type="submit">Search</button>
         </form>
-        <div class="search-results">
+        <div class="search-results" style="display: none;">
           <div style="margin-right:5%; height:72px; width:128px; background-color:red;"><< Search result 0 >></div>
           <div style="margin-right:5%; height:72px; width:128px; background-color:red;"><< Search result 1 >></div>
           <div style="margin-right:5%; height:72px; width:128px; background-color:red;"><< Search result 2 >></div>
