--- a/src/static/style.css
+++ b/src/static/style.css
@@ -207,17 +207,23 @@ section h2 {
     flex-direction: column;
     align-items: center;
 }
+.thumbnail-container {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+.top-left {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.3);
+}
 .timeline-bar {
     width: 100%;
     height: 40px;
     background-color: lightgray;
     position: relative;
     display: flex;
-    border-radius: 5px;
-}
-.progress-bar {
-    height: 100%;
-    background-color: aqua;
     border-radius: 5px;
 }
 .elapsed-time, .total-time {
