add autoplay control

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="queue-section">
-        <h2>Up next:</h2>
+        <h2>Up next:</h2><button class="disconnected" id="autoplay">Autoplay</button>
         <table id="queue-list">
         </table>
       </div>
@@ -51,7 +51,7 @@
     <section class="sub-content">
       <div class="device-section">
         <h2>Devices list</h2>
-        <button onclick="setSink()">Reset Primary</button>
+        <button id="reset-sink">Reset Primary</button>
         <div id="device-list">
         </div>
       </div>
