--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="title-bar">
         <h1><a href="https://github.com/SK1Y101/AutoBreezeBeats">{{ application.title }}</a> v{{ application.version }}</h1>
-        <h1 ><div id="datetime">13:14:89</div><div id="weather">Cloudy</div></h1>
+        <h1 ><div id="datetime">13:14:89</div><div id="weather"></div></h1>
         <h1>{{ host.name }} at {{ host.ip }}</h1>
       </div>
     </header>
@@ -39,7 +39,7 @@
         </div>
       </div>
       <div class="queue-section">
-        <h2>Up next:</h2>
+        <h2>Up next:</h2><button class="disconnected" id="autoplay">Autoplay</button>
         <table id="queue-list">
         </table>
       </div>
@@ -51,7 +51,7 @@
     <section class="sub-content">
       <div class="device-section">
         <h2>Devices list</h2>
-        <button onclick="setSink()">Reset Primary</button>
+        <button id="reset-sink">Reset Primary</button>
         <div id="device-list">
         </div>
       </div>
