--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,7 +10,7 @@
     <header>
       <div class="title-bar">
         <h1><a href="https://github.com/SK1Y101/AutoBreezeBeats">{{ application.title }}</a> v{{ application.version }}</h1>
-        <h1 ><div id="datetime">13:14:89</div><div id="weather"></div></h1>
+        <h1 ><div id="datetime"></div><div id="weather"></div></h1>
         <h1>{{ host.name }} at {{ host.ip }}</h1>
       </div>
     </header>
@@ -30,6 +30,8 @@
                 <div id="elapsed-time">0:00:00</div> / <div id="total-time">0:00:00</div>
               </span>
               <!-- ▶️⏩⏭️⏪⏸️ -->
+              <span id="volumeValue">{{ initial_settings.volume }}</span>
+              <input type="range" id="volumeSlider" min="0" max="100" value="{{ initial_settings.volume }}">
               <button class="control-button" id="skip-previous" disabled>⏪</button>
               <button class="control-button center-button" id="play-pause">▶</button>
               <button class="control-button" id="skip-next" disabled>⏩</button>
@@ -78,8 +80,6 @@
       </div>
     </section>
 
-    <script src="/static/script.js"></script>
-    <script src="/static/devices.js"></script>
-    <script src="/static/playback.js"></script>
+    <script type="module" src="/static/_main.js"></script>
   </body>
 </html>
