--- a/src/static/style.css
+++ b/src/static/style.css
@@ -256,6 +256,9 @@ section h2 {
 .control-button:hover {
     background-color: #0056b3;
 }
+.control-button:disabled {
+    background-color: #333;
+}
 .play-button {
     margin: 0 auto; /* Center play button */
 }
